After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 775515 - asfdemux: memory leak in gst_asf_demux_process_ext_stream_props
asfdemux: memory leak in gst_asf_demux_process_ext_stream_props
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-ugly
unspecified
Other Linux
: Normal normal
: 1.10.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-12-02 11:42 UTC by Hanno Böck
Modified: 2016-12-05 09:11 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Hanno Böck 2016-12-02 11:42:58 UTC
File:
samples.mplayerhq.hu/dvr_ms/microsoft-new-way-to-shove-mpeg2-in-asf.dvr-ms

asan trace:
==13361==ERROR: LeakSanitizer: detected memory leaks

Direct leak of 16 byte(s) in 1 object(s) allocated from:
    #0 0x4d5035 in calloc (/root/gst/master/gst-plugins-base/tools/.libs/gst-discoverer-1.0+0x4d5035)
    #1 0x7f52ea1dacf0 in g_malloc0 /var/tmp/portage/dev-libs/glib-2.50.2/work/glib-2.50.2/glib/gmem.c:124
    #2 0x7f52dd9f6f63 in gst_asf_demux_process_ext_stream_props /root/gst/master/gst-plugins-ugly/gst/asfdemux/gstasfdemux.c:4135:30
    #3 0x7f52dd9f6f63 in gst_asf_demux_process_queued_extended_stream_objects /root/gst/master/gst-plugins-ugly/gst/asfdemux/gstasfdemux.c:4315
    #4 0x7f52dd9f6f63 in gst_asf_demux_parse_data_object_start /root/gst/master/gst-plugins-ugly/gst/asfdemux/gstasfdemux.c:1178
    #5 0x7f52dd9dec4d in gst_asf_demux_pull_headers /root/gst/master/gst-plugins-ugly/gst/asfdemux/gstasfdemux.c:1249:8
    #6 0x7f52dd9dec4d in gst_asf_demux_loop /root/gst/master/gst-plugins-ugly/gst/asfdemux/gstasfdemux.c:1984
    #7 0x7f52eafff813 in gst_task_func /root/gst/master/gstreamer/gst/gsttask.c:334:5
    #8 0x7f52ea1fd857 in g_thread_pool_thread_proxy /var/tmp/portage/dev-libs/glib-2.50.2/work/glib-2.50.2/glib/gthreadpool.c:307
    #9 0x7f52ea1fcec4 in g_thread_proxy /var/tmp/portage/dev-libs/glib-2.50.2/work/glib-2.50.2/glib/gthread.c:784
    #10 0x7f52e9c79453 in start_thread (/lib64/libpthread.so.0+0x7453)
    #11 0x7f52e97a95dc in clone (/lib64/libc.so.6+0xe75dc)
Comment 1 Sebastian Dröge (slomo) 2016-12-02 12:07:25 UTC
commit 0ff3f793308d462bac2cc00d27838752bb82426a
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Fri Dec 2 14:06:21 2016 +0200

    asfdemux: Fix memory leak of payload extensions for unusable/unsupported streams
    
    https://bugzilla.gnome.org/show_bug.cgi?id=775515