asfdemux: Fix memory leak of payload extensions for unusable/unsupported streams

https://bugzilla.gnome.org/show_bug.cgi?id=775515